.prelude/effect/repos/tsgo/testdata/baselines/reference/effect-v4/deterministicKeys_defaultHashed.errors.txt
=== Metadata ===
Effect version: 4.0.0

/.src/test.ts(5,60): error TS377049: This key does not match the deterministic key for this declaration. The expected key is `de06a820ada693c2`. effect(deterministicKeys)
/.src/test.ts(8,46): error TS377049: This key does not match the deterministic key for this declaration. The expected key is `1296269f76d642ec`. effect(deterministicKeys)


==== /.src/tsconfig.json (0 errors) ====
    {
      "compilerOptions": {
        "plugins": [
          {
            "name": "@effect/language-service",
            "keyPatterns": [
              { "target": "service", "pattern": "default-hashed" },
              { "target": "error", "pattern": "default-hashed" }
            ]
          }
        ]
      }
    }
    

==== /.src/package.json (0 errors) ====
    { "name": "@effect/test-app", "version": "1.0.0" }
    

==== /.src/test.ts (2 errors) ====
    // @effect-diagnostics deterministicKeys:error
    import { Context, Data } from "effect"
    
    export class ExpectedServiceIdentifier
      extends Context.Service<ExpectedServiceIdentifier, {}>()("ExpectedServiceIdentifier")
                                                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS377049: This key does not match the deterministic key for this declaration. The expected key is `de06a820ada693c2`. effect(deterministicKeys)
    {}
    
    export class ErrorA extends Data.TaggedError("ErrorA")<{}> {}
                                                 ~~~~~~~~
!!! error TS377049: This key does not match the deterministic key for this declaration. The expected key is `1296269f76d642ec`. effect(deterministicKeys)
    
